[package]
name = "slmp_client"
version = "0.2.1"
authors = ["Masahiro HASEGAWA <masahase@gmail.com>"]
edition = "2018"
description = "Mitsubishi Seamless Message Protocol Client"
readme = "README.md"
repository = "https://github.com/masahase0117/SlmpClient"
license = "BSD-3-Clause"
license-file = "LICENSE"
keywords = ["MELSEC", "PLC"]
categories = ["network-programming", ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "^0.4.0"
rand = "^0.8.3"